@startuml Service_Layer

title Service Layer - Business Logic

' ========== Classic Blue Style (Matching Sequence Diagrams) ==========
skinparam backgroundColor White
skinparam roundcorner 0
skinparam defaultFontName Arial
skinparam defaultFontSize 11

skinparam class {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontColor Black
    FontStyle bold
    FontName Arial
    AttributeFontName Arial
    AttributeFontColor Black
    ArrowColor #282828
}

skinparam interface {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontColor Black
    FontStyle bold
    FontName Arial
}

skinparam package {
    BackgroundColor White
    BorderColor #282828
    FontColor Black
    FontStyle bold
    FontName Arial
}

skinparam classAttributeIconSize 0

package "service" {
    
    class UserService {
        - userDao : UserDao
        - orderService : OrderService
        - {static} currentUser : User
        --
        + UserService()
        + register(String, String, String, UserRole) : String
        + login(String, String) : String
        + logout() : void
        + {static} getCurrentUser() : User
        + {static} isLoggedIn() : boolean
        + {static} isAdmin() : boolean
        + getUserById(Long) : User
        + getAllUsers() : List<User>
        + setUserActive(Long, boolean) : void
        + deleteUser(Long) : void
        + changePassword(String, String) : String
        + updateProfile(String, String, String) : String
        + getTotalSalesAmount() : double
        + getTotalPurchaseAmount() : double
    }
    
    class ItemService {
        - itemDao : ItemDao
        --
        + ItemService()
        + publishItem(Long, String, String, double, String, String) : String
        + getAllActiveItems() : List<Item>
        + getAllItems() : List<Item>
        + getItemById(Long) : Item
        + getItemsBySeller(Long) : List<Item>
        + searchItems(String) : List<Item>
        + searchItems(String, Double, Double, String, String) : List<Item>
        + getItemsByCategory(String) : List<Item>
        + updateItem(Item) : String
        + deactivateItem(Long) : void
        + activateItem(Long) : void
        + deleteItem(Long) : void
        + isItemOwner(Long, Long) : boolean
    }
    
    class OrderService {
        - orderDao : OrderDao
        - itemDao : ItemDao
        - notificationService : NotificationService
        --
        + OrderService()
        + createOrder(Long, Long, String) : String
        + updateOrderStatus(Long, String, Long) : String
        + getOrdersByBuyer(Long) : List<Order>
        + getOrdersBySeller(Long) : List<Order>
    }
    
    class MessageService {
        - messageDao : MessageDao
        --
        + MessageService()
        + sendMessage(Long, Long, String) : String
        + getInbox(Long) : List<Message>
        + getUnreadCount(Long) : long
        + getConversation(Long, Long) : List<Message>
        + markAsRead(Long) : void
        + markConversationAsRead(Long, Long) : void
        + deleteMessage(Long) : void
        + getMessageById(Long) : Message
    }
    
    class NotificationService {
        - notificationDao : NotificationDao
        --
        + NotificationService()
        + createNotification(Long, String, String) : void
        + getUserNotifications(Long) : List<Notification>
        + getUnreadNotifications(Long) : List<Notification>
        + markAsRead(Long) : void
        + markAllAsRead(Long) : void
    }
    
    class ReviewService {
        - reviewDao : ReviewDao
        --
        + ReviewService()
        + addReview(Long, Long, Long, Long, int, String) : String
        + getSellerReviews(Long) : List<Review>
        + getSellerAverageRating(Long) : double
        + hasReviewed(Long) : boolean
    }
    
    class FavoriteService {
        - favoriteDao : FavoriteDao
        - itemDao : ItemDao
        --
        + FavoriteService()
        + addFavorite(Long, Long) : String
        + removeFavorite(Long, Long) : void
        + isFavorite(Long, Long) : boolean
        + getUserFavorites(Long) : List<Favorite>
        + getUserFavoriteItems(Long) : List<Item>
        + getFavoriteCount(Long) : int
        + deleteFavorite(Long) : void
    }
}

package "dao" {
    interface UserDao <<interface>>
    interface ItemDao <<interface>>
    interface OrderDao <<interface>>
    interface MessageDao <<interface>>
    interface NotificationDao <<interface>>
    interface ReviewDao <<interface>>
    interface FavoriteDao <<interface>>
}

package "util" {
    class PasswordUtils {
        - {static} ALGORITHM : String
        --
        + {static} hashPassword(String) : String
        + {static} verifyPassword(String, String) : boolean
        + {static} generateRandomPassword(int) : String
    }
    
    class ValidationUtils {
        - {static} EMAIL_PATTERN : Pattern
        - {static} USERNAME_PATTERN : Pattern
        --
        + {static} isValidUsername(String) : boolean
        + {static} isValidPassword(String) : boolean
        + {static} isValidEmail(String) : boolean
        + {static} isValidPrice(double) : boolean
        + {static} isNotEmpty(String) : boolean
        + {static} getUsernameValidationMessage() : String
        + {static} getPasswordValidationMessage() : String
    }
}

' Service to DAO Dependencies
UserService --> UserDao : uses
UserService --> OrderService : uses
ItemService --> ItemDao : uses
OrderService --> OrderDao : uses
OrderService --> ItemDao : uses
OrderService --> NotificationService : uses
MessageService --> MessageDao : uses
NotificationService --> NotificationDao : uses
ReviewService --> ReviewDao : uses
FavoriteService --> FavoriteDao : uses
FavoriteService --> ItemDao : uses

' Service to Util Dependencies
UserService ..> PasswordUtils : uses
UserService ..> ValidationUtils : uses
ItemService ..> ValidationUtils : uses
OrderService ..> ValidationUtils : uses

@enduml
